# SzimplaCoffee

./: .gitignore  AGENTS.md  CLAUDE.md  HEARTBEAT.md  README.md  comprehensive-plan.md  north-star.md  package-lock.json  pyproject.toml  szimplacoffee.db
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260315_01_sc46_add_normalized_product_metadata.py  20260315_02_sc52_add_merchant_tiers_and_crawl_quality.py  20260318_01_sc70_add_recommendation_run_id_to_purchase_history.py  20260318_02_de1_bridge_state.py  20260320_01_sc104_add_description_text_to_products.py  20260320_02_sc107_add_variant_price_baseline.py
backend/scripts/: backfill_product_metadata.py  categorize_products.py  clean_origin_text.py  generate_quality_profiles.py
backend/src/szimplacoffee/: __init__.py  bootstrap.py  cli.py  config.py  db.py  main.py  models.py
backend/src/szimplacoffee/api/: __init__.py  crawl.py  dashboard.py  de1.py  discovery.py  history.py  merchants.py  products.py  recommendations.py
backend/src/szimplacoffee/schemas/: __init__.py  common.py  crawls.py  dashboard.py  discovery.py  history.py  merchants.py  products.py  (+2 more)
backend/tests/: test_api_products.py  test_backfill_descriptions.py  test_baseline_service.py  test_catalog_sort.py  test_coffee_parser.py  test_crawl_health_api.py  test_crawl_quality.py  test_dashboard.py  test_de1_bridge.py  test_deal_score.py  test_fix_merchant_registry.py  test_history.py  test_recommendation_why_text.py  test_recommendations.py  test_registry_thresholds.py  test_scheduler.py
(+633 files in other folders)
