[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "szimplacoffee"
version = "0.1.0"
description = "Local-first coffee sourcing and recommendation platform"
readme = "north-star.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.135.1",
  "uvicorn>=0.41.0",
  "sqlalchemy>=2.0.48",
  "alembic>=1.18.4",
  "httpx>=0.28.1",
  "beautifulsoup4>=4.14.3",
  "lxml>=6.0.2",
  "apscheduler>=3.11.2",
  "crawlee>=1.5.0",
  "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[project.scripts]
szimpla = "szimplacoffee.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

